RouteLogic-v4.0.0/force-app/main/default/objects/AI_Critical_Error__e/AI_Critical_Error__e.object-meta.xml
<CustomObject>
    <label>AI Critical Error</label>
    <pluralLabel>AI Critical Errors</pluralLabel>
</CustomObject>