RouteLogic-v4.0.0/force-app/main/default/objects/AI_Critical_Error__e/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>100</length>
    <type>Text</type>
</CustomField>