RouteLogic-v4.0.0/force-app/main/default/objects/AI_Critical_Error__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>