RouteLogic-v4.0.0/force-app/main/default/objects/AI_Critical_Error__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>